--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "fb-webhook",
 	"version": "1.0.0",
 	"description": "facebook messenger custom chatbot webhook",
-	"main": "index.js",
+	"main": "server.js",
 	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
