--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
 	"name": "fb-webhook",
 	"version": "1.0.0",
 	"description": "facebook messenger custom chatbot webhook",
-	"main": "server.js",
-	"type": "module",
+	"main": "app.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "NODE_ENV=production node server.js",
-		"dev": "NODE_ENV=development nodemon server.js"
+		"start": "NODE_ENV=production node app.js",
+		"dev": "NODE_ENV=development nodemon app.js"
 	},
 	"license": "MIT",
 	"dependencies": {
+		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"morgan": "^1.10.0",
